overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grwthy-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: grwthy-prod-redirect-https@kubernetescrd
